HAMB-37 Merged user service and deconflict dependencies. User and Job service server starts. WIP integration of user auth for job service requests